Fix the thumbnail image being squashed

--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -2,4 +2,5 @@
     width: 80px;
     height: 80px;
     border-radius: 100%;
+    background-size: cover;
 }
